--- a/Archivos/style.css
+++ b/Archivos/style.css
@@ -2,12 +2,12 @@ body {
   background-color: #A50044;
 }
 
-.col-9 {
+.Texto {
   background-color: #004D98;
   color: white;
   font-size: 18px;
 }
 
-.col-3 {
+.Lista {
   background-color: #EDBB00;
 }
